Small fix on nav
Not responsive yet

--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@ h3#header-subheading {
 }
 
 .nav.nav-tabs li {
-	    	padding: 0% 6.5% 0% 6.5%;
+	    	padding: 0% 6.84% 0% 6.84%;
 }
 
 .nav-tabs {
